--- a/src/app.html
+++ b/src/app.html
@@ -1,11 +1,9 @@
-<!DOCTYPE html>
-<html lang="%lang%">
+<!doctype html>
+<html lang="en">
 	<head>
 		<meta charset="utf-8" />
 		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
-		<meta name="viewport" content="width=device-width" />
-
-		<link rel="stylesheet" href="%sveltekit.assets%/styles/global.css">
+		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		%sveltekit.head%
 	</head>
 	<body data-sveltekit-preload-data="hover">
